# opsgpt-control-tower

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: control_tower.py  interview_dashboard.py  main.py  peft_sandbox.py  responsible_ai.py
backend/app/cycle1/: __init__.py  cli.py  connectors.py  eda.py  fixtures.py  quality.py  storage.py
backend/app/cycle10/: __init__.py  cli.py  ope.py  report.py
backend/app/cycle2/: __init__.py  build.py  cli.py  validate.py
backend/app/cycle3/: __init__.py  cli.py  report.py  stats.py
backend/app/cycle4/: __init__.py  cli.py  data.py  evaluate.py  models.py
backend/app/cycle6/: __init__.py  assistant.py  cli.py  eval.py  retrieval.py  sql_guard.py
backend/app/cycle7/: __init__.py  cli.py  eval.py  workflow.py
backend/app/cycle8/: __init__.py  cli.py  observability.py  replay.py
backend/app/cycle9/: __init__.py  analysis.py  cli.py  report.py
backend/artifacts/cycle10_verify/portfolio/: cycle10_portfolio_20260325T024140Z.json  cycle10_portfolio_20260325T024140Z.md
backend/artifacts/cycle6/: cycle6_rag_eval_20260325T032734Z.json  cycle6_rag_eval_20260325T032734Z.md  cycle6_rag_eval_20260325T032816Z.json  cycle6_rag_eval_20260325T032816Z.md  cycle6_rag_eval_20260325T033019Z.json  cycle6_rag_eval_20260325T033019Z.md  sql_audit.jsonl
backend/artifacts/cycle8/: replay_state.json
backend/artifacts/runtime_control_tower/: latest_cycle4_summary.json
backend/data/warehouse/: verify_cycle1.duckdb  verify_cycle12.duckdb
backend/opsgpt_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_control_tower.py  test_cycle1.py  test_cycle10.py  test_cycle2.py  test_cycle3.py  test_cycle4.py  test_cycle6.py  test_cycle7.py  test_cycle8.py  test_cycle9.py  test_fast_units.py  test_health.py  test_interview_dashboard.py
(+138 files in other folders)
