[project]
name = "opsgpt-backend"
version = "0.1.0"
description = "OpsGPT Control Tower backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "prometheus-client>=0.22.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.12.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
